--- a/styles/style.css
+++ b/styles/style.css
@@ -3,10 +3,36 @@ body {
     margin: auto;
     padding: 0;
     text-align: justify;
+    max-width: 1200px;
 }
 h1, h2 {
     text-align: center;
 }
+.red {
+    color: red;
+}
+.dark, .ice {
+    padding: 1px 2px;
+    font-weight: bold;
+
+    border-radius: 3px;
+
+}
+.dark {
+    background: black; 
+    color: whitesmoke;
+    
+}
+.ice {
+    background: cyan; 
+    color: silver;
+    font-weight: bold;
+    font-style: oblique;
+
+
+}
+
+
 @media screen and (max-width: 480px) {
     body {
 
