--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,36 @@
 body {
+    background: #6a9ae1;
+    padding:  0;
+    margin: 0;
+}
+h1 {
+    color: #fff;
+    text-align: center;
+    margin: 1rem auto;
+    width: 800px;
+
+}
+ul{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content:space-evenly;
+    align-items: flex-start;
+    list-style-type: none;
+    margin: 2rem auto;
+    width: 800px;
+    background: #fff;
+    padding: 2rem;
+    box-sizing: border-box;
+    height: 300px;
+
+}
+li {
+    padding: 2rem;
+    border: 2px solid black;
+}
+
+/*
+body {
     font-family: Arial;
     margin: auto;
     padding: 0;
@@ -39,3 +71,4 @@ h1, h2 {
         background: yellow;
     }
 }
+*/
