--- a/styles/style.css
+++ b/styles/style.css
@@ -13,62 +13,24 @@ h1 {
 ul{
     display: flex;
     flex-flow: row wrap;
-    justify-content:space-evenly;
+    justify-content: space-around;
     align-items: flex-start;
-    list-style-type: none;
+    /*
+    align-content: space-between;
+    */
+    list-style-type: none;  
     margin: 2rem auto;
-    width: 800px;
+    width: 90%;
     background: #fff;
-    padding: 2rem;
+    padding: 2rem;  
     box-sizing: border-box;
-    height: 300px;
-
+    min-height: 250px;
+    border-radius: 4px;
+    
 }
 li {
     padding: 2rem;
-    border: 2px solid black;
+    border: 2px inset rgba(0,0,0,0.7);
+    border-radius: 4px;
+    background: #d7d7e7;
 }
-
-/*
-body {
-    font-family: Arial;
-    margin: auto;
-    padding: 0;
-    text-align: justify;
-    max-width: 1200px;
-}
-h1, h2 {
-    text-align: center;
-}
-.red {
-    color: red;
-}
-.dark, .ice {
-    padding: 1px 2px;
-    font-weight: bold;
-
-    border-radius: 3px;
-
-}
-.dark {
-    background: black; 
-    color: whitesmoke;
-    
-}
-.ice {
-    background: cyan; 
-    color: silver;
-    font-weight: bold;
-    font-style: oblique;
-
-
-}
-
-
-@media screen and (max-width: 480px) {
-    body {
-
-        background: yellow;
-    }
-}
-*/
