--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,22 @@
 body {
-    background: #6a9ae1;
-    padding:  0;
-    margin: 0;
+    background: #000;
+    /* background: #6a9ae1; */
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     color: #fff;
     text-align: center;
-    margin: 1rem auto;
-    width: 800px;
+    margin: 2rem auto;
 
+    /* width: 800px; */
+    
+}
+main {
+    margin: 0 auto;
+
+    width: 800px;
+    padding: 0;
 }
 ul{
     display: flex;
@@ -19,18 +27,22 @@ ul{
     align-content: space-between;
     */
     list-style-type: none;  
-    margin: 2rem auto;
+    /* margin: 2rem auto; */
     width: 90%;
-    background: #fff;
-    padding: 2rem;  
+    /* background: #fff; */
+    /* padding: 2rem;   */
     box-sizing: border-box;
     min-height: 250px;
-    border-radius: 4px;
-    
+    /* border-radius: 4px; */
+    font-weight: 600;
 }
 li {
-    padding: 2rem;
-    border: 2px inset rgba(0,0,0,0.7);
-    border-radius: 4px;
-    background: #d7d7e7;
+    /* padding: 2rem; */
+    /* border: 2px inset rgba(0,0,0,0.7); */
+    /* border-radius: 4px; */
+    /* background: #d7d7e7; */
+    transition: all 500ms 100ms;
+}
+li:hover {
+    text-decoration: underline;
 }
